K8s/overlays/uat/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philosophizer
spec:
  template:
    spec:
      containers:
        - name: philosophizer
