K8s/overlays/uat/philosophizer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: philosophizer
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.auth.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.startsmallstarttoday.com/?rd=$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Remote-User,Remote-Name,Remote-Groups,Remote-Email"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.startsmallstarttoday.com
      secretName: philosophizer-tls
  rules:
    - host: app.startsmallstarttoday.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: philosophizer-internal
                port:
                  number: 80
