K8s/overlays/uat/protected-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-protected-ingress
  namespace: philosophizer
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.auth.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.startsmallstarttoday.com/?rd=$request_uri"

spec:
  rules:
    - host: app.startsmallstarttoday.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: philosophizer-internal
                port:
                  number: 80
